# Fit-File-Faker

./: pyproject.toml
docs/: changelog.md
fit_file_faker/: __init__.py  app_registry.py  config.py  fit_editor.py
tests/: conftest.py  test_app_registry.py  test_fit_editor.py
tests/files/: onelap_20260427.fit  tpv_dev_fields_20260222.fit
