[project]
name = "fit-file-faker"
version = "2.1.4"
description = "Modify and auto-upload FIT files from third-party platforms to unlock Garmin Connect features"
authors = [
  { name="Josh Taillon", email="jat255@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "garth>=0.5.21",
    "platformdirs>=4.5.1",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "semver>=3.0.4",
    "watchdog>=6.0.0",
    "bitstruct==8.11.1",
    "openpyxl==2.5.12"
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-autorefs>=1.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "livereload>=2.7.1",
    "click<=8.3.0",  # pinned due to https://github.com/mkdocs/mkdocs/issues/4032
]

[project.urls]
Homepage = "https://github.com/jat255/Fit-File-Faker"
Issues = "https://github.com/jat255/Fit-File-Faker/issues"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
fit-file-faker = "fit_file_faker.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["fit_file_faker*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
fit_file_faker = ["py.typed"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
exclude = [
    "fit_file_faker/vendor",
]

[tool.coverage.run]
omit = [
    "fit_file_faker/vendor/*",
    "*/fit_file_faker/vendor/*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.git-cliff.changelog]
# Header displayed at the top of the changelog
header = """
# Changelog

All notable changes to FIT File Faker are documented here.

This changelog is automatically generated from git commit messages using [git-cliff](https://git-cliff.org/).
See our [release history](https://github.com/jat255/Fit-File-Faker/releases) on GitHub for downloadable releases.

"""

# Body template for each version section
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}](https://github.com/jat255/fit-file-faker/releases/tag/{{ version }}) - ({{ timestamp | date(format="%Y-%m-%d") }})
{% else %}\
    ## [Unreleased]
{% endif %}\
{% if version == "v2.0.3" %}

> **Note:** Versions 2.0.1 and 2.0.2 were skipped due to CI/CD configuration issues during the release process and those versions yanked from PyPI. Please do not use them.
{% endif %}\
{% for group in ["Features", "Bug Fixes", "Performance", "Minor Features", "Refactoring", "Documentation", "Testing", "CI/CD", "Build System", "Styling", "Miscellaneous Tasks", "Reverts"] -%}
{% set group_commits = commits | filter(attribute="group", value=group) -%}
{% if group_commits %}
    ### {{ group }}
    {% for commit in group_commits %}
        - {% if commit.scope %}**{{ commit.scope }}:** {% endif %}{{ commit.message | split(pat="\n") | first }}{% if commit.message is containing("\n") %}...{% endif %}\
{% if commit.breaking %} [**BREAKING**]{% endif %} \
([{{ commit.id | truncate(length=7, end="") }}](https://github.com/jat255/Fit-File-Faker/commit/{{ commit.id }}))
    {% endfor %}
{% endif -%}
{% endfor -%}
"""

# Footer template (optional)
footer = """
<!-- generated by git-cliff -->
"""

# Remove leading and trailing whitespace
trim = true

[tool.git-cliff.git]
# Parse conventional commits (https://www.conventionalcommits.org/)
conventional_commits = true

# Filter commits based on conventional commits
filter_unconventional = false

# Split commits by newlines
split_commits = false

# Commit preprocessors (modify commit messages before processing)
commit_preprocessors = [
    # Replaces "(#123)" with "([#123](github.com))"
    # The <REPO> placeholder is automatically resolved.
    # Using 'issues/${1}' works for both issues and pull requests on GitHub.
    {"pattern" = "\\((issue |pr |Issue |PR )#([0-9]+)\\)", "replace" = "(${1}[#${2}](https://github.com/jat255/fit-file-faker/issues/${2}))"},
    {"pattern" = "\\(#([0-9]+)\\)", "replace" = "([#${1}](https://github.com/jat255/fit-file-faker/issues/${1}))"}
]

# Commit parsers - define how to categorize commits
commit_parsers = [
    # Skip rules MUST come first - git-cliff processes in order
    { message = "^docs: update changelog", skip = true },
    { message = "^chore\\(release\\): prepare for", skip = true },
    { message = "^chore: bump version", skip = true },
    { message = "^chore\\(deps\\)", skip = true },
    { message = "^chore\\(pr\\)", skip = true },
    { message = "^chore\\(pull\\)", skip = true },
    # Categorization rules
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^minor-feat", group = "Minor Features" },
    { message = "^doc", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactoring" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Testing" },
    { message = "^chore", group = "Miscellaneous Tasks" },
    { message = "^ci", group = "CI/CD" },
    { message = "^build", group = "Build System" },
    { message = "^revert", group = "Reverts" },
]

# Protect breaking changes from being skipped
protect_breaking_commits = true

# Filter out commits
filter_commits = false

# Tag pattern for releases
tag_pattern = "v[0-9]\\.[0-9]\\.[0-9]"

# Skip tags (old releases before conventional commits)
skip_tags = "v0.0.1-beta.1|v1.0.0|v1.0.1|v1.0.2|v1.0.3|v1.1.0|v1.1.1|v1.2.0|v1.2.1|v1.2.2|v1.2.3|v1.2.4"

# Ignore tags that match this regex (alternative to skip_tags)
# ignore_tags = "^v(0|1\\.0|1\\.1|1\\.2)\\."  # Skip all versions before 1.3.0
ignore_tags = ""

# Sort tags topologically (newest first)
topo_order = false

# Sort commits by oldest first
sort_commits = "newest"

[tool.git-cliff.remote.github]
owner = "jat255"
repo = "Fit-File-Faker"

[tool.git-cliff.bump]
features_always_bump_minor = true
breaking_always_bump_major = true
initial_tag = "v1.3.0"
